deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locale
spec:
  replicas: 2
  selector:
    matchLabels:
      app: locale
  template:
    metadata:
      labels:
        app: locale
    spec:
      containers:
        - name: locale
          image: safrrhmn/cloud-nd-capstone:master
          ports:
            - name: tcp
              containerPort: 8080
          imagePullPolicy: Always
