lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: locale-service-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: locale
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
